--- a/css/styles.css
+++ b/css/styles.css
@@ -40,3 +40,21 @@ footer {
     background-image: linear-gradient(#CEC8FF, white);
     padding: 20px 0;
 }
+
+.tab-content{
+    border: 1px solid #DDD;
+    border-top: none;
+    padding: 10px;
+}
+
+.navbar-dark{
+    background-color: #901CAD;
+}
+
+.carousel-caption{
+    background-color: rgba(0,0,0,0.5);
+}
+
+.carousel{
+    border: solid #5637DD;
+}
